# django-rest-search

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  indexers.rst  make.bat  tasks.rst
rest_search/: __init__.py  decorators.py  forms.py  indexers.py  middleware.py  schemas.py  tasks.py  utils.py  views.py
src/rest_search/: __init__.py  about.py  decorators.py  forms.py  indexers.py  middleware.py  schemas.py  tasks.py  views.py
tests/: celeryconfig.py  forms.py  indexers.py  models.py  serializers.py  settings.py  test_connection.py  test_decorators.py  test_end_to_end.py  test_forms.py  test_indexers.py  test_middleware.py  test_schemas.py  test_tasks.py  test_views.py  urls.py  utils.py  views.py
